<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.ethannjc.project3.MainMenuFragment">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20dp" >

        <Button
            android:id="@+id/new_game_button"
            style="@style/MenuButton"
            android:text="@string/new_game" />
        <Button
            android:id="@+id/options_button"
            style="@style/MenuButton"
            android:text="@string/options"/>
        <Button
            android:id="@+id/exit_button"
            style="@style/MenuButton"
            android:text="@string/exit"/>
    </LinearLayout>

</FrameLayout>
